--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -1,3 +1,19 @@
+body {
+  background-color: white;
+}
+
+table, td, th {
+  border: 1px solid black;
+}
+table {
+  border-collapse: collapse;
+  max-width: 10%;
+  max-height: 15em;
+  overflow-x: scroll;
+  overflow-y: scroll;
+  white-space: nowrap;
+}
+
 .outer {
   display: grid;
   grid-template: 1fr / 1fr;
@@ -8,13 +24,16 @@
   grid-row: 1 / 1;
 }
 .outer .below {
+  font-size: 1.2em;
+  border-radius: 1px;
   z-index: 1;
-  background-color: white;
+  background-color: lightgoldenrodyellow;
 }
 .outer .top {
+  border-radius: 1px;
   z-index: 2;
-  padding-top: 5px;
-  padding-left: 5px;
+  padding-top: 0px;
+  padding-left: 0px;
   background-color: white;
 }
 
@@ -44,4 +63,12 @@ a {
 
 a:hover {
   text-decoration: underline;
+}
+
+button {
+  background-color: #ffe600;
+  border: solid black;
+  margin-right: 15px;
+  border-radius: 10px;
+  font-size: 1.3em;
 }
