Add execution timer to cells

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -79,3 +79,9 @@ button {
   border-radius: 10px;
   font-size: 1.3em;
 }
+
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto;
+}
+
