Improve the look of tables

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -3,7 +3,8 @@ body {
 }
 
 table, td, th {
-  border: 1px solid black;
+  border: 2px solid lightgrey;
+  overflow-x: scroll;
 }
 table {
   border-collapse: collapse;
